--- a/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels_ru.properties
+++ b/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels_ru.properties
@@ -14,3 +14,7 @@ label.confirm-save.action = \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u04
 label.blog = \u0411\u043b\u043e\u0433
 label.author = \u0410\u0432\u0442\u043e\u0440
 label.contacts = \u0421\u0432\u044f\u0436\u0438\u0442\u0435\u0441\u044c \u0441 \u043d\u0430\u043c\u0438
+label.publication.title = \u041f\u0443\u0431\u043b\u0438\u043a\u0430\u0446\u0438\u044f
+label.publication.action = \u041e\u043f\u0443\u0431\u043b\u0438\u043a\u043e\u0432\u0430\u0442\u044c
+label.publication.name = \u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
+label.publication.content = \u0422\u0435\u043a\u0441\u0442 \u043f\u0443\u0431\u043b\u0438\u043a\u0430\u0446\u0438\u0438
