no func changes. added support tag, started edition index.jsp

--- a/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels_ru.properties
+++ b/Documents/NetBeansProjects/j60/blog/blogAvalonRu/blog.avalon.ru/src/java/ru/avalon/blog/resources/labels_ru.properties
@@ -18,3 +18,5 @@ label.publication.title = \u041f\u0443\u0431\u043b\u0438\u043a\u0430\u0446\u0438
 label.publication.action = \u041e\u043f\u0443\u0431\u043b\u0438\u043a\u043e\u0432\u0430\u0442\u044c
 label.publication.name = \u0417\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u043a
 label.publication.content = \u0422\u0435\u043a\u0441\u0442 \u043f\u0443\u0431\u043b\u0438\u043a\u0430\u0446\u0438\u0438
+label.blog.title = \u0411\u043b\u043e\u0433 J60-exam
+label.blog.show.action = \u041f\u043e\u043a\u0430\u0437\u0430\u0442\u044c \u0437\u0430\u043f\u0438\u0441\u0438
